Correção da politica de restart do container

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -3,7 +3,7 @@ services:
   db:
     image: mysql:8.0
     container_name: vollmed_db
-    restart: always
+    restart: unless-stopped
     ports:
       - '3306:3306'
     environment:
