--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -8,3 +8,8 @@ services:
       - '3306:3306'
     environment:
       MYSQL_ROOT_PASSWORD: root
+      MYSQL_DATABASE: vollmed_api
+    volumes:
+      - vollmed:/var/lib/mysql
+volumes:
+  vollmed:
